Also changed to Gauss.

--- a/numerical/numerical.tex
+++ b/numerical/numerical.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical.tex - Ian Huston
-% $Id: numerical.tex,v 1.21 2009/10/07 16:03:31 ith Exp $
+% $Id: numerical.tex,v 1.22 2009/10/08 14:58:43 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.21 2009/10/07 16:03:31 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.22 2009/10/08 14:58:43 ith Exp $}
 % \input{numerical/paper3}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -418,7 +418,7 @@ determine the value of $\dvp1$ for a $k$ mode before its evolution starts.
 
 
 We are interested in the production of second order effects by the
-evolution of the the gaussian first order modes and we make no
+evolution of the the Gaussian first order modes and we make no
 assumptions about the existence of second order perturbations before
 the simulation begins. Therefore we set the initial condition for each second order
 perturbation mode to be $\dvp2=0, \dN{\dvp2}=0$ at
