--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % results.tex - Ian Huston
-% $Id: results.tex,v 1.9 2009/10/06 16:47:54 ith Exp $
+% $Id: results.tex,v 1.10 2009/10/08 14:58:43 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.9 2009/10/06 16:47:54 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.10 2009/10/08 14:58:43 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -507,11 +507,11 @@ readily calculated.
 
 
 By computing the perturbations to second order we have direct access
-to the non-gaussianity of $\dvp{}$.  While useful for the toy models
+to the non-Gaussianity of $\dvp{}$.  While useful for the toy models
 discussed above (with $\fnl\simeq0$), when used to investigate models
 with predictions of large non-linearity parameter $\fnl$ this technique
 could yield greater insight into the formation and development of the
-non-gaussian contributions by studying the contribution of the different
+non-Gaussian contributions by studying the contribution of the different
 terms in the source term \eq{eq:KG2-source-ntime}.
 %
 It was shown recently that in order to calculate $\fnl$ instead of
