Change to using align in some places.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.46 2009/10/05 15:52:09 ith Exp $
+% $Id: mainintro.tex,v 1.47 2009/10/08 21:35:17 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.46 2009/10/05 15:52:09 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.47 2009/10/08 21:35:17 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -646,14 +646,14 @@ We must also consider perturbations in the metric tensor $g_{\mu\nu}$. If the
 background metric is the FRW one described in Section~\ref{sec:frw-intro} then
 the metric can be written with perturbations, up to first order, as follows:
 % 
-\begin{eqnarray}
+\begin{align}
  \label{eq:pertmetric-intro}
- g_{00} &=& -a^2 (1 + 2\phi_1) \,,\\
- g_{0i} &=& a^2 (B_{1,i} - S_{1i}) \,,\\
- g_{ij} &=& a^2\left[ (1 - 2\psi_1)\delta_{ij} + 2E_{1,ij} + 2F_{1(i,j)} +
+ g_{00} &= -a^2 (1 + 2\phi_1) \,, \nonumber\\
+ g_{0i} &= a^2 (B_{1,i} - S_{1i}) \,, \nonumber\\
+ g_{ij} &= a^2\left[ (1 - 2\psi_1)\delta_{ij} + 2E_{1,ij} + 2F_{1(i,j)} +
 h_{1ij}
 \right] \,.
-\end{eqnarray}
+\end{align}
 % 
 The vectors $S_{1i}$ and $F_{1i}$ are divergence free and the tensor part
 $h_{1ij}$
